--- a/src/components/DropArea/DropArea.css
+++ b/src/components/DropArea/DropArea.css
@@ -29,3 +29,14 @@
   align-items: center;
   flex-direction: column;
 }
+.close-btn {
+  font-size: 10px;
+  color: black;
+  position: relative;
+  top: -45px;
+  left: 25px;
+  display: hidden;
+  padding: 5px 10px;
+  border-radius: 50%;
+  background-color: rgb(246, 82, 82);
+}
